# sandra-etl

./: .gitignore  LICENSE  README.md  pyproject.toml
sandraetl/: __init__.py  extractor.py  loader.py  pipeline.py  transformer.py
